Rest of the Commit

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,19 @@
 *.exe
 *.out
 *.app
+
+Content/ParagonMurdock/
+
+Content/ParagonPhase/
+
+Content/ParagonShinbi/
+
+Content/SoulCave/
+
+Content/StarterContent/
+
+Content/ThirdPerson/
+
+Saved/
+
+Intermediate/
